# js-engine-1

./: CMakeLists.txt  README.md  win-configure.bat
JSE/core/include/engine/: Updateable.hpp
JSE/core/include/graphics/: Bitmap.hpp  BoundingVolume.h  BoundingVolume.hpp  Buffer.hpp  GpuShader.cpp  GpuShader.hpp  GraphicsDriver.hpp  GraphicsTypes.hpp  Material.hpp  Renderable.hpp  ShaderManager.hpp  Texture.hpp  VertexArray.hpp
JSE/core/include/impl/: BufferOGL.hpp  GpuShaderOGL.hpp  GraphicsDriverOGL.hpp  InputServiceSDL.hpp  KeyboardSDL.hpp  TextureOGL.hpp  VertexArrayOGL.hpp
JSE/core/include/input/: InputService.hpp  InputTypes.hpp
JSE/core/include/math/: Frustum.hpp  Interp.hpp
JSE/core/include/scene/: Animation.hpp  AnimationManager.hpp  AnimationTrack.hpp  AssimpLoader.hpp  Camera.hpp  GltfLoader.hpp  Light.hpp  Mesh3d.hpp  Node3d.hpp  Scene.hpp  SceneLoader.hpp
JSE/core/include/system/: Filesystem.hpp  Strings.hpp  SystemTypes.hpp  Timer.hpp
JSE/core/source/graphics/: Bitmap.cpp  BoundingVolume.cpp  GraphicsDriver.cpp  ShaderManager.cpp  Texture.cpp  VertexArray.cpp
JSE/core/source/impl/: BufferOGL.cpp  GpuShaderOGL.cpp  GpuShaderStageOGL.cpp  GraphicsDriverOGL.cpp  InputServiceSDL.cpp  TextureOGL.cpp  VertexArrayOGL.cpp
JSE/core/source/scene/: Animation.cpp  AnimationManager.cpp  AnimationTrack.cpp  AssimpLoader.cpp  Camera.cpp  GltfLoader.cpp  Light.cpp  Mesh3d.cpp  Node3d.cpp  Scene.cpp
JSE/core/source/system/: Filesystem.cpp  Logger.cpp  Strings.cpp
assets/: test.blend  test.blend1  test.dae  test.glb  test.gltf  test.gltf~  test.mtl  test2.blend  test2.blend1  test2.dae  test2.gltf  test2_anim.blend  test2_anim.blend1  test2_anim.gltf  x.blend
assets/modellek/: index.htm
assets/modellek/3ds/: index.htm
assets/modellek/3ds/aircraft/a10/: a10.prj
assets/modellek/3ds/aircraft/ah64/: ah64.nfo  ah64body.3ds  ah64rotr.3ds  hastings.txt
assets/modellek/3ds/aircraft/balloon/: balloon.3ds  balloon.nfo
assets/modellek/3ds/aircraft/bellrang/: bellrang.3ds  bellrang.txt
assets/modellek/3ds/aircraft/bi_plane/: bi_plane.3ds
assets/modellek/3ds/aircraft/blimp/: blimp.3ds  blimp.nfo  blimp.txt
assets/modellek/3ds/aircraft/cobra/: cobra.3ds  cobra.nfo
assets/modellek/3ds/aircraft/f16a/: f16a.nfo
assets/modellek/3ds/aircraft/hind24h/: hind24h.3ds  hind24h.txt
assets/modellek/3ds/aircraft/pln_stuk/: pln_stuk.3ds  pln_stuk.txt
assets/modellek/3ds/aircraft/wildcat/: wildcat.3ds
assets/modellek/3ds/building/chrysler/: chrysler.3ds
assets/modellek/3ds/building/house/: house.3ds
assets/modellek/3ds/furnitur/altochr/: altochr.3ds  altochr.txt
assets/modellek/3ds/furnitur/chair/: chair.3ds
assets/modellek/3ds/furnitur/compdesk/: compdesk.3ds
assets/modellek/3ds/furnitur/costes/: costes.prj
assets/modellek/3ds/furnitur/flwcouch/: flwcouch.3ds  flwcouch.txt
assets/modellek/3ds/furnitur/table_of/: table_of.3ds  table_of.txt
assets/modellek/3ds/furnitur/tblflw/: tblflw.3ds
assets/modellek/3ds/natural/bnchplt2/: benchplt.prj  oak_bed1.cel
assets/modellek/3ds/natural/moose/: moose.nfo  moosebul.3ds  moosecow.3ds
assets/modellek/3ds/natural/pinecon2/: pinecon2.3ds  pinecon2.txt
assets/modellek/3ds/object/binocul/: binocul.3ds
assets/modellek/3ds/object/candleh1/: candleh1.3ds  info.txt
assets/modellek/3ds/object/cd_disk/: cd_disk.3ds
assets/modellek/3ds/object/computer/: computer.3ds
assets/modellek/3ds/object/flpydisk/: flpydisk.3ds  flpydsk.nfo
assets/modellek/3ds/object/frame/: frame.3ds  frame.txt
assets/modellek/3ds/object/kbrmidi/: kbrmidi.3ds  readme.txt
assets/modellek/3ds/object/knives/: knifechf.3ds  knifeclv.3ds  knifepar.3ds  knifestk.3ds  knives.nfo
assets/modellek/3ds/object/legos/: legos.3ds
assets/modellek/3ds/object/lmptizio/: lmptizio.3ds
assets/modellek/3ds/object/rose/: rose.3ds
assets/plane/: plane.gltf
assets/shaders/: specular_frag.glsl  specular_vtx.glsl  zpass_vtx.glsl
demo/: cube.hpp  demo.cpp
(+9 files in other folders)
